# stm32mp2-baremetal-tests

./: .gitmodules  devenv.sh  openocd-orb.cfg
doc/: notes.md
mechanical/: pnp-fixture.slvs
mkimage/: main.cpp
old-src/: main.S
pcb/mp2-xc7k-test/: .gitignore  clocking.kicad_sch  fpga.kicad_sch  fpgasupport.kicad_sch  mp2-xc7k-test.kicad_pcb  mp2-xc7k-test.kicad_prl  mp2-xc7k-test.kicad_pro  mp2-xc7k-test.kicad_sch  psu.kicad_sch  soc.kicad_sch  socsupport.kicad_sch  unused-io.kicad_sch
rtl/constraints/: top.xdc
rtl/top/: top.sv
rtl/vivado-project/: .gitignore  mp2-litefury.xpr
rtl/vivado-project/mp2-litefury.srcs/sources_1/ip/clk_wiz_0/: clk_wiz_0.xci
rtl/vivado-project/mp2-litefury.srcs/sources_1/ip/gtwizard_0/: gtwizard_0.xci
rtl/vivado-project/mp2-litefury.srcs/sources_1/ip/ila_0/: ila_0.xci
rtl/vivado-project/mp2-litefury.srcs/sources_1/ip/ila_1/: ila_1.xci
rtl/vivado-project/mp2-litefury.srcs/sources_1/ip/vio_0/: vio_0.xci
src/: Makefile  main.S  stm32mp257-cpu2-ramload.ld
src/cpu1-a35/: .gdbinit  .gitignore  CMakeLists.txt  Makefile  main.S  mainloop.cpp  startup.S
src/cpu1-a35/bsp/: common-vectors.cpp  hwinit.cpp  hwinit.h
src/cpu1-a35/main/: CMakeLists.txt  Init.cpp  a35test.h
src/cpu2-m33/: .gdbinit  CMakeLists.txt
src/cpu2-m33/bsp/: common-vectors.cpp  hwinit.cpp  hwinit.h
src/cpu2-m33/main/: CMakeLists.txt  Init.cpp  LocalConsoleTask.h  RISAFMonitorTask.cpp  RISAFMonitorTask.h  RemoteLoggerTask.cpp  RemoteLoggerTask.h  TestCLISessionContext.cpp  TestCLISessionContext.h  m33test.h  vectors.cpp
